[package]
name = "seeya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leaflet = { git = "https://gitlab.com/thburghout/leaflet-rs.git", features = ["front-end-yew"] }
wasm-bindgen = "0.2"
yew = "0.19.3"
serde_json = "1.0.81"
web-sys = "0.3.58"
gloo-utils = "0.1.4"




